--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
     ],
     "rewrites": [
       {
+        "source": "/sendMail",
+        "function": "sendMail"
+      },
+      {
         "source": "**",
         "function": "ssr"
       }
