--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "cssnano": "^4.1.10",
+    "dotenv": "^8.1.0",
     "node-fetch": "^2.6.0",
     "polka": "^0.5.0",
+    "postcss": "^6.0.23",
     "rollup-plugin-json": "^4.0.0",
     "sirv": "^0.4.0",
     "svelte-preprocess-postcss": "^1.1.0",
